<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright (c) 2014.                                                       ~
  ~ Stefan Schulze Programs.                                                  ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<resources>
    <!-- Application -->
    <string name="app_name">DK</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_list_item_icon_description">Item Icon</string>
    <string name="navigation_drawer_list_item_title_title_screen">Title Screen</string>
    <string name="navigation_drawer_list_item_title_players">Players</string>
    <string name="navigation_drawer_list_item_title_current_session">Current Session</string>
    <string name="navigation_drawer_list_item_title_sessions">Sessions</string>
    <item type="drawable" name="navigation_drawer_list_item_icon_title_screen">@drawable/ic_launcher</item>
    <item type="drawable" name="navigation_drawer_list_item_icon_players">@drawable/no_user_logo</item>
    <item type="drawable" name="navigation_drawer_list_item_icon_current_session">@drawable/no_user_logo</item>
    <item type="drawable" name="navigation_drawer_list_item_icon_sessions">@drawable/no_user_logo</item>

    <!-- Menu bar actions -->
    <string name="action_add_player">Add Player</string>
    <string name="action_add_session">Add Session</string>
    <string name="action_add_game">Add Game</string>
    <string name="action_show_table">Table</string>
    <string name="action_show_current_session_overview">Overview</string>
    <string name="action_about">About</string>

    <!-- About window -->
    <string name="dialog_about_copyright">Copyright (c) 2014-2015</string>
    <string name="dialog_about_ssp">Stefan Schulze Programs</string>
    <string name="dialog_about_button">Close</string>

    <!-- Player Add/Edit dialog window -->
    <string name="dialog_player_image">Player Image</string>
    <string name="dialog_player_name">Player Name</string>
    <string name="dialog_add_player_title">Add New Player</string>
    <string name="dialog_add_player_cancel">Cancel</string>
    <string name="dialog_add_player_ok">Add</string>
    <string name="dialog_edit_player_title">Edit Player</string>
    <string name="dialog_edit_player_cancel">Cancel</string>
    <string name="dialog_edit_player_ok">OK</string>

    <!-- Player options dialog window -->
    <string name="dialog_player_options_title">Player Options</string>
    <string name="dialog_player_options_delete">Delete Player</string>
    <string name="dialog_player_options_edit">Edit Player</string>

    <!-- Player image dialog window -->
    <string name="dialog_player_image_options_title">Select Player Image</string>
    <string name="dialog_player_image_options_camera">Take Picture</string>
    <string name="dialog_player_image_options_file">Select Image File</string>
    <string name="dialog_player_image_options_contact">Select Contact Image</string>
    <string name="dialog_player_image_options_default">Default Image</string>
    <string name="dialog_player_image_options_cancel">Cancel</string>

    <!-- Session add dialog window -->
    <string name="dialog_session_add_title">Add session</string>
    <string name="dialog_session_add_name">Session name</string>
    <string name="dialog_session_add_ok">Add</string>
    <string name="dialog_session_add_cancel">Cancel</string>

    <!-- Session rename dialog window -->
    <string name="dialog_session_rename_title">Rename session</string>
    <string name="dialog_session_rename_name">Session name</string>
    <string name="dialog_session_rename_ok">Change</string>
    <string name="dialog_session_rename_cancel">Cancel</string>

    <!-- Session options dialog window -->
    <string name="dialog_session_options_title">Session Options</string>
    <string name="dialog_session_options_start">Start session</string>
    <string name="dialog_session_options_players">Select players</string>
    <string name="dialog_session_options_rename">Rename session</string>
    <string name="dialog_session_options_delete">Delete session</string>

    <!-- Session player selection dialog window -->
    <string name="dialog_session_player_selection_title">Player selection</string>
    <string name="dialog_session_player_selection_ok">OK</string>
    <string name="dialog_session_player_selection_cancel">Cancel</string>

    <!-- Game dialog window -->
    <string name="dialog_game_title">Add Game</string>
    <string name="dialog_game_ok">OK</string>
    <string name="dialog_game_cancel">Cancel</string>
    <string name="dialog_game_prev_player">Previous</string>
    <string name="dialog_game_next_player">Next</string>
    <string name="dialog_game_lost">Lost</string>
    <string name="dialog_game_draw">Draw</string>
    <string name="dialog_game_won">Won</string>
    <string name="dialog_game_score">Score: </string>
    <string name="dialog_game_player">Player</string>

    <!-- Player parameter -->
    <string name="player_name">Player Name</string>
    <string name="player_sessions_count">Sessions</string>
    <string name="player_sessions_wins">Wins</string>
    <string name="player_sessions_losses">Losses</string>

    <!-- Information window descriptions -->
    <string name="toast_player_added">Added player</string>
    <string name="toast_player_add_canceled">No player added</string>
    <string name="toast_player_edit">Changed player</string>
    <string name="toast_player_edit_canceled">No player changed</string>
    <string name="toast_player_deleted">Deleted player</string>
    <string name="toast_no_contact_selected">No contact selected</string>
    <string name="toast_no_image_selected">No image selected</string>
    <string name="toast_no_image_captured">No image captured</string>
    <string name="toast_session_added">Added session</string>
    <string name="toast_session_add_canceled">No session added</string>
    <string name="toast_session_deleted">Deleted session</string>
    <string name="toast_session_invalid_start">Without a player the session can\'t be started</string>
    <string name="toast_session_select_players_invalid">Players can not be changed after session
        has already been started</string>
    <string name="toast_session_renamed">Renamed session</string>
    <string name="toast_session_rename_canceled">No session renamed</string>
    <string name="toast_session_options_player_selection_cancel">No change in player list</string>
    <string name="toast_session_options_player_selection_ok">Player list changed of session</string>

    <!-- Session parameter-->
    <string name="session_name">Session name</string>
    <string name="session_creation_date">Date of creation</string>
    <string name="session_games_count">Games</string>
    <string name="session_players_count">Players</string>

    <!-- Current session fragment -->
    <string name="current_session_tab_overview">Overview</string>
    <string name="current_session_tab_table">Table</string>
    <string name="current_session_tab_statistics">Stats</string>
    <string name="current_session_num_draws">Draws</string>
    <string name="current_session_num_wins">Wins</string>
    <string name="current_session_num_losses">Losses</string>
    <string name="current_session_score">Score</string>
    <string name="current_session_player_name">Player Name</string>
    <string name="current_session_player_image">Player Image</string>

    <!-- Current session table fragment -->
    <string name="current_session_table_game_number">Game</string>

    <!-- Errors -->
    <string name="toast_fragment_error">Fragment error</string>
    <string name="toast_invalid_request">Invalid request</string>
    <string name="toast_drawer_selection_error">Drawer Selection Error</string>
    <string name="toast_invalid_session">Start a valid session first</string>

</resources>
