<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/CurrentSessionOverview_SessionPlayer_Image"
        android:src="@drawable/no_user_logo"
        android:padding="3dp"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/player_name"
            android:id="@+id/CurrentSessionOverview_SessionPlayer_PlayerName"
            android:layout_gravity="left|center_vertical"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_session_num_neutrals"
            android:id="@+id/CurrentSessionOverview_SessionPlayer_NumNeutrals"
            android:layout_gravity="left|center_vertical"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_session_num_wins"
            android:id="@+id/CurrentSessionOverview_SessionPlayer_NumWins"
            android:layout_gravity="left|center_vertical"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_session_num_losses"
            android:id="@+id/CurrentSessionOverview_SessionPlayer_NumLosses"
            android:layout_gravity="left|center_vertical"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_session_score"
            android:id="@+id/CurrentSessionOverview_SessionPlayer_Score"
            android:layout_gravity="left|center_vertical"
            android:singleLine="true" />
    </LinearLayout>

</LinearLayout>