<?xml version="1.0" encoding="utf-8"?>

<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright (c) 2014.                                                       ~
  ~ Stefan Schulze Programs.                                                  ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dialog_add_game"
    android:gravity="center"
    android:padding="5dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:layout_height="90dp">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="fill_parent"
            android:id="@+id/DialogAddGame_Image"
            android:src="@drawable/no_user_logo"
            android:contentDescription="@string/dialog_player_image"
            android:scaleType="fitCenter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="Player Name"
            android:paddingLeft="5dp"
            android:id="@+id/DialogAddGame_Name"
            android:singleLine="true"
            android:layout_gravity="left"
            android:gravity="center_vertical" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/DialogAddGame_Buttons"
        android:layout_margin="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_game_lost"
            android:id="@+id/DialogAddGame_ButtonLost" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_game_neutral"
            android:checked="true"
            android:id="@+id/DialogAddGame_ButtonNeutral" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_game_won"
            android:id="@+id/DialogAddGame_ButtonWon" />
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <NumberPicker
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/DialogAddGame_ScorePickerNegative" />

        <NumberPicker
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/DialogAddGame_ScorePicker1000" />

        <NumberPicker
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/DialogAddGame_ScorePicker100" />

        <NumberPicker
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/DialogAddGame_ScorePicker10" />

        <NumberPicker
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/DialogAddGame_ScorePicker1" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_game_score"
        android:id="@+id/DialogAddGame_Score"
        android:singleLine="true"
        android:layout_gravity="center_horizontal"
        android:paddingTop="5dp" />

</LinearLayout>